    Dialog fix segfault with --chooser filespec #320
    Translation strings adjusted #322 #318 #325 #326
    save session delayed on tab change if save tabs
    path bar steal enter key
    improved overwrite dir #330 #312
    support mips and other architectures - change to sys/inotify.h #311
    manual Rename and New File dialogs; adjust Options menu keys #268
0.8.7   2013-03-17:
    added translation files to transifex.com [Delix]
    Delix and Aqualung71 contributed to German translation
    Josué Hernández & CommanderC completed Spanish translation
    Teodoro Santoni contributed to Italian translation
    revert breadcrumbs to Ctrl+Click #266 and no auto seek on activate path
    fix broken key shortcut New|Link
    new desktop menu; new Devices menu
    fix open folder on desktop reuses browser on wrong desktop
    use menu key on desktop
    handle hyphened desktop references #118
    add link indicator to desktop icons
    file props show link target - closes #192
    file props allow change file dates
    Jui contributed to Czech translation
    fix spacefm -p 1 nospec opens wrong panel
    always present window on create
    dir change monitor truly canonicalize paths
    stabilize on fam/gamin server exited
    added socket properties: tab_count new_tab sort_... #225 #272
    fix File Search|Content|Case Sensitive checkbox function inverted #276
    added and documented socket method run-task #224
    run_in_terminal and edit_file deprecated yet left-in
    list double-click activates in app chooser
    mount webdav shares in terminal for password entry - udevil issue 21
    use mouse buttons 6,7 as back,forward in addition to 4,5 8,9 #279
    add WM_WINDOW_ROLEs
0.8.6   2013-02-13:
    fix cannot create directory or file on CentOS #253
    update russian translation
    case insensitive sort on Type, Owner columns
    move debian/ to distros/debian/ and update README
    Enter clicks Set, Esc twice clicks Unset in Set Key dialog